# cmkeStuding

./: CMakeLists.txt  main.cpp
auplayer/: CMakeLists.txt
auplayer/hdrs/: player.h  track.h
auplayer/src/: CMakeLists.txt
comp/computers/: CMakeLists.txt  CMakeLists.txt.save
comp/computers/hdrs/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
comp/computers/scr/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
medcine/build-medcine-Desktop_a5c41e-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  medcine.cbp
medcine/build-medcine-Desktop_a5c41e-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-e0742ca6a4cd53c6713f.json  codemodel-v2-0f24dc93065e8003a8ce.json  index-2023-08-22T05-22-10-0381.json  target-medcine-Debug-1b38753c7a4c47dec2cd.json
medcine/build-medcine-Desktop_a5c41e-Debug/.cmake/api/v1/reply.prev/: cache-v2-e06f033aa133c79d65c3.json  codemodel-v2-c2df97bdd2ab3e55ee4e.json  index-2023-08-22T05-17-43-0464.json  target-medcine-Debug-d8517073366bef74b857.json
medcine/build-medcine-Desktop_a5c41e-Debug/.qtc_clangd/: compile_commands.json
medcine/build-medcine-Desktop_a5c41e-Debug/.qtc_clangd/.cache/clangd/index/: _mingw.h.A199B8F3A6E2ECCC.idx  _mingw_ddk.h.19D150AFA9A410BE.idx  _mingw_mac.h.3896FF66141D50E1.idx  _mingw_off_t.h.5D6BF78F8A2C50B4.idx  allocator.h.8EFF3A5678197879.idx  (+124 more)
medcine/medcine/: CMakeLists.txt  hemorstat.cpp  hemorstat.h  suture.cpp  tweezers.cpp  tweezers.h
medcine/medcine/include/: hermostat.h  scalpel.h  suture.h
medcine/medcine/src/: main.cpp  scalpel.cpp
mobile/: CMakeLists.txt  main.cpp
mobile/inc/: phone.h
mobile/scr/: main.cpp  mobile.cpp
